@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.telenav.cactus</groupId>
         <artifactId>cactus</artifactId>
-        <version>1.5.20</version>
+        <version>1.5.31</version>
     </parent>
 
     <artifactId>cactus-maven-plugin</artifactId>
@@ -27,8 +27,6 @@
 
     <properties>
         <enforcer.skip>true</enforcer.skip>
-        <!--<maven.javadoc.skip>true</maven.javadoc.skip>-->
-        <mastfrog.version>2.8.3</mastfrog.version>
         <!-- this must be overridden here only to use the previous version,
         or it will fail trying to process itself while it is being built -->
         <cactus.maven.plugin.versions>${cactus.previous.version}</cactus.maven.plugin.versions>
@@ -36,12 +34,16 @@
     </properties>
 
     <dependencies>
-
+        
         <!-- Cactus -->
 
         <dependency>
             <groupId>com.telenav.cactus</groupId>
             <artifactId>cactus-git</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.telenav.cactus</groupId>
+            <artifactId>cactus-graph</artifactId>
         </dependency>
         <dependency>
             <groupId>com.telenav.cactus</groupId>
@@ -57,11 +59,19 @@
         </dependency>
         <dependency>
             <groupId>com.telenav.cactus</groupId>
+            <artifactId>cactus-tasks</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.telenav.cactus</groupId>
             <artifactId>cactus-codeflowers</artifactId>
         </dependency>
 
         <!-- Mastfrog -->
 
+        <dependency>
+            <groupId>com.mastfrog</groupId>
+            <artifactId>function</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.mastfrog</groupId>
             <artifactId>util-streams</artifactId>
@@ -84,6 +94,9 @@
             <artifactId>maven-core</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- Testing -->
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -104,24 +117,26 @@
     <build>
         <plugins>
 
-            <plugin>
+            <!-- Keeping these in case we re-modularize -->
+            
+            <!--            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>--add-reads</arg>
+                        <arg>- -add-reads</arg>
                         <arg>cactus.maven.plugin=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
                 <version>${maven-compiler-plugin.version}</version>
             </plugin>
-            
+
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
-                    <additionalOptions>--add-reads cactus.maven.plugin=ALL-UNNAMED</additionalOptions>
+                    <additionalOptions>- -add-reads cactus.maven.plugin=ALL-UNNAMED</additionalOptions>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
             <plugin>
 
@@ -131,8 +146,8 @@
                     <goalPrefix>cactus</goalPrefix>
                 </configuration>
                 <executions>
-                    <!-- We need this for release, so that we can use compile, but 
-                         but not install, to pre-generate the plugin descriptor so that 
+                    <!-- We need this for release, so that we can use compile, but
+                         but not install, to pre-generate the plugin descriptor so that
                          the rest of the build, which will use this plugin from
                          target/classes, does not fail because there is no plugin.xml
                          in META-INF.  Harmless to do it earlier, since we're not using
@@ -145,7 +160,7 @@
                             <goal>descriptor</goal>
                         </goals>
                     </execution>
-                    
+
                     <execution>
                         <id>mojo-descriptor</id>
                         <phase>process-classes</phase>
@@ -162,6 +177,27 @@
                 </executions>
 
             </plugin>
+            <plugin>
+                <groupId>com.telenav.cactus</groupId>
+                <artifactId>cactus-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check-published</goal>
+                        </goals>
+                        <configuration>
+                            <!-- in other words, fail, don't warn -->
+                            <warnOnAlreadyPublished>false</warnOnAlreadyPublished>
+                            <!-- by default, we consider an identical published pom fine,
+                                 but in this case, we are trying to prevent either a
+                                 release but failure to bump the version after, or
+                                 someone accidentally changing the version *downward* -->
+                            <identicalOk>false</identicalOk>
+                        </configuration>
+                    </execution>
+                </executions>
+                
+            </plugin>
 
         </plugins>
 
@@ -171,6 +207,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-plugin-plugin</artifactId>
                     <version>${maven.plugin.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.telenav.cactus</groupId>
+                    <artifactId>cactus-maven-plugin</artifactId>
+                    <version>${cactus.previous.version}</version>
                 </plugin>
             </plugins>
 
